Pagination config + Paginated community search results

--- a/frontend/src/assets/styles/NavMenu.css
+++ b/frontend/src/assets/styles/NavMenu.css
@@ -9,9 +9,9 @@
     min-height: 100vh;
     background: var(--bg-primary);
   }
-  
+ 
   /*Nav styles*/
-  nav {
+  .side-nav {
     position: fixed;
     width: 60px;
     height: 100%;
@@ -20,27 +20,27 @@
     overflow: hidden;
     z-index: 100;
   }
-  
-  nav.active {
+ 
+  .side-nav.active {
     width: 300px;
   }
-  
-  nav ul {
+ 
+  .side-nav ul {
     position: absolute;
     top: 0;
     left: 0;
     width: 100%;
     padding: 0;
   }
-  
-  nav ul li {
+ 
+  .side-nav ul li {
     list-style: none;
     width: 100%;
     position: relative;
   }
-  
-  nav ul li a,
-  nav ul li a.toggle {
+ 
+  .side-nav ul li a,
+  .side-nav ul li a.toggle {
     position: relative;
     display: flex;
     width: 100%;
@@ -50,12 +50,12 @@
     transition: 0.2s;
     cursor: pointer;
   }
-  
-  nav ul li a:hover {
+ 
+  .side-nav ul li a:hover {
     color: var(--active-color);
   }
-  
-  nav ul li a::before {
+ 
+  .side-nav ul li a::before {
     content: "";
     position: absolute;
     top: 0;
@@ -65,14 +65,14 @@
     background-color: transparent;
     transition: 0.2s;
   }
-  
-  nav ul li:hover a::before {
+ 
+  .side-nav ul li:hover a::before {
     background-color: var(--active-color);
     opacity: 0.1;
     width: 100%;
   }
-  
-  nav ul li a .icon {
+ 
+  .side-nav ul li a .icon {
     position: relative;
     display: flex;
     min-width: 60px;
@@ -80,23 +80,23 @@
     align-items: center;
     justify-content: center;
   }
-  
-  nav ul li a .title {
+ 
+  .side-nav ul li a .title {
     position: relative;
     font-size: 0.85em;
     white-space: nowrap;
   }
-  
-  nav ul li a.toggle {
+ 
+  .side-nav ul li a.toggle {
     border-bottom: 3px solid var(--bg-primary);
   }
-  
+ 
   .toggle {
     cursor: pointer;
   }
-  
+ 
   /*Header styles*/
-  header {
+  .site-header {
     display: none;
     justify-content: space-around;
     align-items: center;
@@ -105,56 +105,56 @@
     color: var(--text-color);
     z-index: 101;
   }
-  
-  header.header-visible {
+ 
+  .site-header.header-visible {
     display: flex;
   }
-  
-  header a {
+ 
+  .site-header a {
     color: var(--text-color);
     text-decoration: none;
   }
-  
+ 
   /* Content area */
   .content {
     margin-left: 60px;
     padding: 20px;
     transition: margin-left 0.5s;
   }
-  
-  nav.active + .content {
+ 
+  .side-nav.active + .content {
     margin-left: 300px;
   }
-  
+ 
   /*Mobile styles Nav*/
   @media (max-width: 768px) {
-    header {
+    .site-header {
       display: flex;
     }
-    
-    nav {
+   
+    .side-nav {
       left: -60px;
     }
-    
-    nav.mobile {
+   
+    .side-nav.mobile {
       left: -60px;
     }
-    
-    nav.active.mobile {
+   
+    .side-nav.active.mobile {
       left: 0;
       width: 100%;
     }
-    
-    nav ul li a.toggle.hidden {
+   
+    .side-nav ul li a.toggle.hidden {
       display: none;
     }
-    
+   
     .content,
-    nav.active + .content {
+    .side-nav.active + .content {
       margin-left: 0;
       padding-top: 80px;
     }
-    
+   
     body {
       overflow-x: hidden;
     }
