--- a/frontend/src/assets/styles/NavMenu.css
+++ b/frontend/src/assets/styles/NavMenu.css
@@ -1,6 +1,6 @@
 :root {
-    --bg-primary: #ffffff;
-    --bg-secondary: #f8f9fa;
+    --bg-primary: #e9ecef;
+    --bg-secondary: #e9ecef;
     --active-color: #0dcaf0; 
     --text-color: #212529;
   }
