Fixed sign-out style

--- a/frontend/src/assets/styles/NavMenu.css
+++ b/frontend/src/assets/styles/NavMenu.css
@@ -1,5 +1,5 @@
 :root {
-    --bg-primary: #e9ecef;
+    --bg-primary: #d7dce1;
     --bg-secondary: #e9ecef;
     --active-color: #0dcaf0; 
     --text-color: #212529;
