--- a/frontend/src/assets/styles/app.css
+++ b/frontend/src/assets/styles/app.css
@@ -1,5 +1,5 @@
 body {
-    background-color: #e9ecef; /* Lighter gray, tweak as needed */
+    background-color: #ffffff; /* Lighter gray, tweak as needed */
     color: #212529;
     margin: 0;
   }
